--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -65,6 +65,7 @@
 \include{cut_from_distributed_solver}
 \include{keeneland_benchmarks}
 %\include{spear_benchmarks}
+\include{hardware}
 
 %\include{stokes_revisited}
 
