Added dedication and acknowledgements

--- a/latex/acknowledgments.tex
+++ b/latex/acknowledgments.tex
@@ -1,18 +1,31 @@
 \begin{acknowledgments}
 
-Thank you to my committee. 
+I feel compelled to start by thanking my major professor, Dr. Gordon Erlebacher, who shared with me a unique attitude and excitement in regard to research. After years of collaboration, I find myself echoing his own audacious style in questioning the work done by others; never quite satisfied by their responses. Without his supervision and constant prodding this dissertation would not have been possible. %Gordon's skill as a computational scientist is exemplary. Time and again I have watched him fearlessly work in areas outside his own domain of expertise in a way I can only hope to simulate. 
 
-Drs. David Yuen, Bengt Fornberg, Kiran Katta, Geoff Womeldorff
+Of no lesser significance is Dr. Natasha Flyer, who is not formally listed as a co-advisor due to restrictions at the university level, but who has in all capacities fulfilled that role. I am sincerely grateful for the time spent at NCAR under her tutelage. In addition to fortifying my understanding of RBF methods and geophysical PDEs, Natasha shared a number of unforgettable life-lessons that reflect in my choice of employment and pursuit of happiness today. 
 
-The students and faculty in DSC. 
+I also extend my gratitude to the remainder of my committee for their patience and willingness to participate in this venture. 
 
-Special thanks to the DSC Staff. 
+In no particular order, I am indebted to:
+\begin{itemize}
+\item Drs. David Yuen, Bengt Fornberg, Grady Wright, John Burkardt and Kiran Katta for their support and feedback on numerical modeling;
+\item the RBF research group at CU-Boulder for a number of ideas that led to interesting investigations;
+\item Dr. Geoff Womeldorff for insightful discussion and for the high resolution Spherical CVT meshes tested herein;
+\item Steven Henke for a number of discussions regarding our concurrent investigations into space-filling curves, neighbor queries, and GPU computing;
+\item Brent Swartz, Yectli Huerta, Andrew Ring, and the rest of the University of Minnesota Supercomputing Institute for playing sounding board to my ideas and providing access to computational resources;
+\item the faculty and students in the FSU Department of Scientific Computing (DSC) who built a community of collaboration and interdisciplinary research that I am proud to be part of;
+\item the DSC staff for their tireless support and assistance;  
+\item and past and present students in Gordon's research group (esp. Ian Johnson, Andrew Young, and Nathan Crock) for brainstorming sessions, weekend hack-a-thons and their camaraderie.
+\end{itemize}
 
-Thanks as well to the entire team at MSI for computational resources 
+This research was funded in part by NSF awards DMS-\#0934331 (FSU), DMS-\#0934317 (NCAR) and ATM-\#0602100 (NCAR). It used resources of the Keeneland Computing Facility at the Georgia Institute of Technology, which is supported by the National Science Foundation under Contract OCI-0910735.
 
-This research was funded by awards: 
+I now close with a very special thank you to my loved ones (both friends and family) who have supported me during the course of this work. You have waited patiently as I devoted all time and energy into completing this milestone. I look forward to resuming life with all of you in it. 
 
-
-
+%
+%\begin{quote}
+%This is science, not politics! Don't you know the difference? A politician starts in the middle with ``$ = b$" and draws conclusions based on smoke and mirrors. In science you have no choice but to start from the beginning with something like ``$Ax = b$". (Gordon Erlebacher, c. 2010). 
+%\end{quote} 
+%
 
 \end{acknowledgments}
