--- a/latex/dedication.tex
+++ b/latex/dedication.tex
@@ -1,7 +1,7 @@
 
 \begin{dedication}
-To the one who taught me patience, compassion, and determination. Thank you, mom.
-
+This work is dedicated to the one who taught me patience, compassion, bravery, and determination. Thank you, mom.
+  
 \begin{center}
 \emph{--E}
 \end{center}
