--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -12,7 +12,7 @@
 \degree{Doctor of Philosophy}                 
 \semester{Fall}                          % [Spring, Summer, Fall]
 \degreeyear{2013}
-\defensedate{November 1, 2013}
+\defensedate{November 6, 2013}
 %\subject{My Topic}
 %\keywords{keyterm1; keyterm2; keyterm3; ...}
 
@@ -30,8 +30,8 @@
 \maketitle
 \makecommitteepage
 %%
-%\include{dedication}
-%\include{acknowledgments}
+\include{dedication}
+\include{acknowledgments}
 %%
 \tableofcontents
 \listoftables
