--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -17,8 +17,8 @@
 %\keywords{keyterm1; keyterm2; keyterm3; ...}
 
 \committeeperson{Gordon Erlebacher}{Professor Directing Thesis}
-\committeeperson{Natasha Flyer}{Outside University Representative}
 \committeeperson{Mark Sussman}{University Representative}
+\committeeperson{Natasha Flyer}{Committee Member}
 \committeeperson{Dennis Slice}{Committee Member}
 \committeeperson{Ming Ye}{Committee Member}
 \committeeperson{Janet Peterson}{Committee Member}
