Done with all front-matter

--- a/latex/biography.tex
+++ b/latex/biography.tex
@@ -1,8 +1,14 @@
 \begin{biosketch}
 
-Evan Bollig was born on the 6th of June, 1983, and grew up in the sleepy town of Sun Prairie, Wisconsin. He completed his Bachelor studies at the University of Minnesota--Twin Cities in 2006 with dual degrees in Computer Science and German Studies. In 2009, Evan earned a Master's in Computational Science from the Department of Scientific Computing at Florida State University. 
+Evan Bollig was born on the 6th of June, 1983, and grew up in the sleepy town of Sun Prairie, Wisconsin. He completed his Bachelor studies at the University of Minnesota--Twin Cities in 2006 with dual degrees in Computer Science and German Studies. 
 
-Evan currently lives in Saint Paul, Minnesota, and works as a research associate at the Minnesota Supercomputing Institute. 
+In 2009, Evan was awarded a Master's Degree in Computational Science from the Department of Scientific Computing at Florida State University with a thesis titled, ``Centroidal Voronoi Tessellation Of Manifolds using the GPU". As a Master's student, Evan worked as both a graduate research and teaching assistant in the Department of Scientific Computing.
+
+During the summer of 2009, Evan was one of 11 participants in the Summer Internship in Parallel Computational Science (SIParCS) program at the National Center for Academic Research (NCAR). The following year he returned to NCAR for a second internship; this time with Dr. Natasha Flyer in the Institute for Mathematics Applied to Geosciences (IMAGe) division. In 2011, he was invited to return a third time as a graduate student visitor for an extended collaboration with Dr. Flyer between June 2011 and February 2012. 
+
+Evan was briefly employed as a Software Engineer by the Tallahassee, Florida branch of Homes.com from August to December 2012. 
+
+Presently, Evan lives in Saint Paul, Minnesota, and works as a research associate for the University of Minnesota Supercomputing Institute (since December 2012). 
 
 
 \end{biosketch}
