--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -4,7 +4,7 @@
 \input{all_usepackages}
 
 
-\title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
+\title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences \authnote{TODO: Remove refcheck} }
 \author{Evan F. Bollig}
 \college{College of Arts and Science}
 \department{Department of Scientific Computing} % Delete if no department
@@ -47,25 +47,25 @@
 \mainmatter
 
 \include{introduction}
-%\include{rbffd_method}
-%\include{ordering_and_preconditioning}
+\include{rbffd_method}
+\include{ordering_and_preconditioning}
 \include{gpu_solver}
-%\include{distributed_solver}
+\include{distributed_solver}
 \include{multigpu_rbffd}
 %
-%\include{explicit_pde_solutions}
+\include{explicit_pde_solutions}
 \include{implicit_pde_solutions}
 %\include{publications}
 %
 \include{conclusions}
 %
 \appendix
-%\include{rbffd_avoid_pole_singularities}
-%\include{rbffd_weights_on_sphere}
+\include{rbffd_avoid_pole_singularities}
+\include{rbffd_weights_on_sphere}
 \include{cut_from_distributed_solver}
 \include{keeneland_benchmarks}
 %\include{spear_benchmarks}
-\include{hardware}
+%\include{hardware}
 
 %\include{stokes_revisited}
 
